Observation, Reward, Episode hacking

--- a/Verify Setup.ipynb
+++ b/Verify Setup.ipynb
@@ -45,33 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Total reward -546.9059935114558\n",
-      "Simulation duration 3.1666666666666665 seconds\n",
-      "Total reward -569.2122991621885\n",
-      "Simulation duration 3.1333333333333333 seconds\n",
-      "Total reward -565.1250148856145\n",
-      "Simulation duration 3.2 seconds\n",
-      "Total reward -527.9302798780858\n",
-      "Simulation duration 3.1333333333333333 seconds\n",
-      "Total reward -574.691499635479\n",
-      "Simulation duration 3.2666666666666666 seconds\n",
-      "Total reward -542.0221311408636\n",
-      "Simulation duration 3.2 seconds\n",
-      "Total reward -539.5502714919832\n",
-      "Simulation duration 3.2 seconds\n",
-      "6.8 s ± 149 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%timeit -n1\n",
+    "#%%timeit -n1\n",
     "observation = env.reset()\n",
     "total_reward = 0.0\n",
     "for i in range(200):\n",
