Reorg; Starting on Train Distributed notebook.

--- a/Rollout Distributed.ipynb
+++ b/Rollout Distributed.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'database'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-af35d4963225>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0menvironment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mactions\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprepare_env_action\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreset_frameskip\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0menvironment\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrewards\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0menv_obs_to_custom_reward\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdatabase\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpersist_timesteps\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'database'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -15,12 +27,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "from td3 import TD3\n",
+    "from models.td3 import TD3\n",
     "# from osim.env import ProstheticsEnv\n",
-    "from prosthetics_env_with_history import ProstheticsEnvWithHistory\n",
-    "from observations import prepare_model_observation\n",
-    "from actions import prepare_env_action, reset_frameskip\n",
-    "from rewards import env_obs_to_custom_reward\n",
+    "from environment.prosthetics_env_with_history import ProstheticsEnvWithHistory\n",
+    "from environment.observations import prepare_model_observation\n",
+    "from environment.actions import prepare_env_action, reset_frameskip\n",
+    "from environment.rewards import env_obs_to_custom_reward\n",
     "from database import persist_timesteps\n"
    ]
   },
@@ -68,21 +80,7 @@
    "source": [
     "with open('config_distributed.json', 'r') as f:\n",
     "    CONFIG = json.load(f)\n",
-    "print(json.dumps(CONFIG, indent=4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# OUTPUT_DIR = Path('.')\n",
-    "# LOGS_DIR = OUTPUT_DIR/'logs'\n",
-    "# CHECKPOINTS_DIR = OUTPUT_DIR/'checkpoints'\n",
-    "# os.makedirs(OUTPUT_DIR, exist_ok=True)\n",
-    "# os.makedirs(LOGS_DIR, exist_ok=True)\n",
-    "# \n"
+    "print(json.dumps(CONFIG, indent=4))\n"
    ]
   },
   {
