Almost ready for distributed training.

--- a/Train Distributed.ipynb
+++ b/Train Distributed.ipynb
@@ -257,22 +257,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() missing 1 required positional argument: 'df_history'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-9-440de8b91bc0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0menv_obs_history_to_model_obs_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0menv_obs_history_to_model_obs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0menv_obs_custom_reward_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mobs\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0menv_obs_to_custom_reward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0menv_obs_custom_done_fn\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mshould_abort_episode\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m )\n",
-      "\u001b[0;31mTypeError\u001b[0m: __init__() missing 1 required positional argument: 'df_history'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "history_sampler = DatabaseHistorySampler(\n",
     "    env_obs_history_to_model_obs_fn=env_obs_history_to_model_obs, \n",
+    "    n_obs_history=3,\n",
     "    env_obs_custom_reward_fn=lambda obs: sum(env_obs_to_custom_reward(obs).values()),\n",
     "    env_obs_custom_done_fn=should_abort_episode,\n",
     ")\n"
@@ -291,14 +280,22 @@
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train model:   1%|          | 37/5000 [01:40<3:44:43,  2.72s/batch]"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Train for `eval_freq` batches:\n",
     "    if CONFIG['model']['architecture'] == \"TD3\":\n",
     "        policy.train(\n",
     "            history_sampler,#replay_buffer, \n",
-    "            CONFIG['training']['eval_freq'],\n",
+    "            int(CONFIG['training']['eval_freq']),\n",
     "            CONFIG['training']['batch_size'], \n",
     "            CONFIG['training']['discount'], \n",
     "            CONFIG['training']['tau'], \n",
@@ -309,7 +306,7 @@
     "    else: \n",
     "        policy.train(\n",
     "            history_sampler,#replay_buffer, \n",
-    "            CONFIG['training']['eval_freq'],\n",
+    "            int(CONFIG['training']['eval_freq']),\n",
     "            CONFIG['training']['batch_size'], \n",
     "            CONFIG['training']['discount'], \n",
     "            CONFIG['training']['tau']\n",
