Fix bug which allowed the actions to be negative.

--- a/Train Distributed.ipynb
+++ b/Train Distributed.ipynb
@@ -21,7 +21,7 @@
     "# from osim.env import ProstheticsEnv\n",
     "from environment.prosthetics_env_with_history import ProstheticsEnvWithHistory\n",
     "from environment.observations import prepare_model_observation, env_obs_history_to_model_obs\n",
-    "from environment.actions import prepare_env_action, reset_frameskip\n",
+    "# from environment.actions import prepare_env_action, reset_frameskip\n",
     "from environment.rewards import env_obs_to_custom_reward\n",
     "from distributed.database import persist_timesteps, persist_event, get_total_timesteps, clear_clients_for_thread\n",
     "from distributed.db_history_sampler import DatabaseHistorySampler\n",
