--- a/Rollout Distributed.ipynb
+++ b/Rollout Distributed.ipynb
@@ -337,7 +337,7 @@
     "    # else:\n",
     "    action = policy.select_action(prepare_model_observation(env))\n",
     "    if CONFIG['rollout']['expl_noise'] != 0: \n",
-    "        action = (action + np.random.normal(0, CONFIG['rollout']['expl_noise'], size=env.action_space.shape[0])).clip(env.action_space.low[0], env.action_space.high[0])\n",
+    "        action += np.random.normal(0, CONFIG['rollout']['expl_noise'], size=action.shape)\n",
     "\n",
     "    # Perform action\n",
     "    action = prepare_env_action(action)\n",
