--- a/[old] Combined Rollout and Train.ipynb
+++ b/[old] Combined Rollout and Train.ipynb
@@ -5245,7 +5245,7 @@
     "    else:\n",
     "        action = policy.select_action(prepare_model_observation(env))\n",
     "        if CONFIG['training']['expl_noise'] != 0: \n",
-    "            action = (action + np.random.normal(0, CONFIG['training']['expl_noise'], size=env.action_space.shape[0])).clip(env.action_space.low, env.action_space.high)\n",
+    "            action += np.random.normal(0, CONFIG['training']['expl_noise'], size=action.shape)\n",
     "\n",
     "    # Perform action\n",
     "    action = prepare_env_action(action)\n",
