New training session with negative actions fixed and no early episode abort.

--- a/Rollout Distributed.ipynb
+++ b/Rollout Distributed.ipynb
@@ -176,26 +176,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def should_abort_episode(env_obs, custom_rewards=None, verbose=False):\n",
-    "#     print((np.array(env_obs['body_pos_rot']['torso'])*180/math.pi > 60).any())\n",
-    "#     if env_obs['body_pos_rot']['torso'][2] < -0.2:\n",
+    "# def should_abort_episode(env_obs, custom_rewards=None, verbose=False):\n",
+    "# #     print((np.array(env_obs['body_pos_rot']['torso'])*180/math.pi > 60).any())\n",
+    "# #     if env_obs['body_pos_rot']['torso'][2] < -0.2:\n",
+    "# #         return True\n",
+    "#     rewards = custom_rewards if custom_rewards != None else env_obs_to_custom_reward(env_obs)\n",
+    "#     # print(f'Custom reward: {sum(rewards.values())}')\n",
+    "#     if (env_obs['body_pos']['head'][0] - env_obs['body_pos']['pelvis'][0]) < -.2:\n",
+    "#         if verbose: print(f'Aborting episode due to head being > .2m behind the pelvis ({env_obs[\"body_pos\"][\"head\"][0] - env_obs[\"body_pos\"][\"pelvis\"][0]}).')\n",
     "#         return True\n",
-    "    rewards = custom_rewards if custom_rewards != None else env_obs_to_custom_reward(env_obs)\n",
-    "    # print(f'Custom reward: {sum(rewards.values())}')\n",
-    "    if (env_obs['body_pos']['head'][0] - env_obs['body_pos']['pelvis'][0]) < -.2:\n",
-    "        if verbose: print(f'Aborting episode due to head being > .2m behind the pelvis ({env_obs[\"body_pos\"][\"head\"][0] - env_obs[\"body_pos\"][\"pelvis\"][0]}).')\n",
-    "        return True\n",
-    "    if np.fabs(env_obs['body_pos']['head'][2]) > 0.5:\n",
-    "        if verbose: print(f'Aborting episode due to head being > 0.5m away from centerline ({env_obs[\"body_pos\"][\"head\"][2]}).')\n",
-    "        return True\n",
-    "    if sum(rewards.values()) < -10:\n",
-    "        if verbose:\n",
-    "            print(f'Aborting episode due to custom reward < -10 ({sum(rewards.values())}):')\n",
-    "            for k,v in rewards.items():\n",
-    "                if v < 0:\n",
-    "                    print(f'  reward `{k}` = {v}')\n",
-    "        return True\n",
-    "    return False\n",
+    "#     if np.fabs(env_obs['body_pos']['head'][2]) > 0.5:\n",
+    "#         if verbose: print(f'Aborting episode due to head being > 0.5m away from centerline ({env_obs[\"body_pos\"][\"head\"][2]}).')\n",
+    "#         return True\n",
+    "#     if sum(rewards.values()) < -10:\n",
+    "#         if verbose:\n",
+    "#             print(f'Aborting episode due to custom reward < -10 ({sum(rewards.values())}):')\n",
+    "#             for k,v in rewards.items():\n",
+    "#                 if v < 0:\n",
+    "#                     print(f'  reward `{k}` = {v}')\n",
+    "#         return True\n",
+    "#     return False\n",
     "    "
    ]
   },
@@ -343,8 +343,8 @@
     "    action = prepare_env_action(action)\n",
     "    obs, reward, done, _ = env.step(action, **env_step_kwargs)\n",
     "\n",
-    "    if not done:\n",
-    "        done = should_abort_episode(env.get_state_desc(), verbose=True)\n",
+    "    # if not done:\n",
+    "    #     done = should_abort_episode(env.get_state_desc(), verbose=True)\n",
     "    done_bool = 0 if episode_timesteps + 1 == CONFIG['rollout']['max_episode_steps'] else float(done)\n",
     "\n",
     "    # custom_rewards = compute_rewards(new_obs_dict)\n",
