Output from experiment 2 training script.

--- a/Train Distributed.ipynb
+++ b/Train Distributed.ipynb
@@ -373,7 +373,52 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Train model:  47%|████▋     | 1170/2500 [02:45<03:50,  5.78batch/s]"
+      "Train model: 100%|██████████| 2500/2500 [05:52<00:00,  7.09batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAving policy checkpoints to s3://colllin-nips-2018-prosthetics/checkpoints/checkpoint_TD3*\n",
+      "SAving policy checkpoints to s3://colllin-nips-2018-prosthetics/checkpoints/checkpoint_TD3_T47909_2018-10-19T20:15:04.372928*\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train model: 100%|██████████| 2500/2500 [05:55<00:00,  7.04batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAving policy checkpoints to s3://colllin-nips-2018-prosthetics/checkpoints/checkpoint_TD3*\n",
+      "SAving policy checkpoints to s3://colllin-nips-2018-prosthetics/checkpoints/checkpoint_TD3_T51472_2018-10-19T20:21:01.083062*\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train model: 100%|██████████| 2500/2500 [05:52<00:00,  7.10batch/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SAving policy checkpoints to s3://colllin-nips-2018-prosthetics/checkpoints/checkpoint_TD3*\n",
+      "SAving policy checkpoints to s3://colllin-nips-2018-prosthetics/checkpoints/checkpoint_TD3_T61332_2018-10-19T20:26:54.947192*\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Train model:  42%|████▏     | 1048/2500 [02:27<03:56,  6.15batch/s]"
      ]
     }
    ],
